# talks

./: index.html  readme.md
2018-monadic-party/: deploy.hs  index.html  nixpkgs.nix  readme.md  server-address.txt  server.nix
2018-monadic-party/modules/: bootstrap.nix  nginx.nix  party-count.nix  party-either.nix  party-scotty.nix  party-socket.nix
2018-monadic-party/monadic-party/: .gitignore  default.nix  ghc-version.nix  monadic-party.cabal  readme.md  shell.nix
2018-monadic-party/monadic-party/app/: party-count.hs  party-either.hs  party-scotty.hs  party-socket.hs
2018-monadic-party/monadic-party/lib/MonadicParty/: Count.hs  Either.hs  Scotty.hs  Socket.hs
2018-monadic-party/slides/: .gitignore  cabal.project  default.nix  index.html  readme.md  run.hs  shell.nix  slides.md
2018-monadic-party/slides/run-slides/: run-slides.cabal  stack.yaml
2018-monadic-party/slides/run-slides/app/: run-slides.hs
2018-monadic-party/slides/run-slides/lib/: RunSlides.hs
2018-monadic-party/slides/slidy/scripts/: slidy.js
2018-monadic-party/slides/slidy/styles/: slidy.css
