name: run-slides
version: 0

cabal-version: >= 1.10
build-type: Simple

library
  hs-source-dirs: lib

  exposed-modules:
      RunSlides

  build-depends:
      async
    , base
    , directory
    , filepath
    , fsnotify
    , safe-exceptions
    , scotty
    , text
    , turtle
    , wai-middleware-static

  ghc-options: -Wall
  build-depends: base
  default-language: Haskell2010

executable run-slides
  hs-source-dirs: app
  main-is: run-slides.hs

  build-depends:
      base
    , run-slides

  ghc-options: -Wall -threaded
  default-language: Haskell2010
